--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -25,7 +25,7 @@
                     <td>{{ i.vendor }}</td>
                     <td>{{ i.total }}</td>
                     <td>{{ i.tax }}</td>
-                    <td>{{ i.date }}</td>
+                    <td>{{ i.date|date:"m/d/y"}}</td>
                     <td>{{ i.category }}</td>
                     <td>{{ i.account }}</td>
                 </tr>
