--- a/receipts/templates/receipts/list.html
+++ b/receipts/templates/receipts/list.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}
+    My Receipts
+{% endblock title %}
+{% load static %}
+{% block content %}
     <main>
         <h1>My Receipts</h1>
         <table>
@@ -33,5 +30,4 @@
             </tbody>
         </table>
     </main>
-</body>
-</html>
+{% endblock content %}
