--- a/receipts/templates/base.html
+++ b/receipts/templates/base.html
@@ -11,11 +11,12 @@
     <header>
         <nav>
             <ul>
-            <!-- if user signed in -->
+            {% if user.is_authenticated %}
                 <li><a href="{% url 'logout' %}">Logout</a></li>
-            <!-- else -->
+            {% else %}
                 <li><a href="{% url 'signup' %}">Sign Up</a></li>
                 <li><a href="{% url 'login' %}">Login</a></li>
+            {% endif %}
             </ul>
         </nav>
     </header>
